# CosmosReason2-SFT

./: LICENSE  README.md  README_ja.md
SFT/: .env  README.md  README_ja.md  llava_sft.py  llava_sft.toml  setup_cosmos-reason2_post-training.sh
demo_app/: README.md  fastapi_app.py  pyproject.toml  run_fastapi_uvicorn.py
demo_app/static/: index.html
